# placesmemo

./: README.md  build.sh  manage.py  pyproject.toml  render.yaml  requirements.txt
accounts/: forms.py  urls.py  views.py
accounts/templates/: login.html  register.html
api/: apps.py  serializers.py  urls.py  views.py
lists/: forms.py  models.py  urls.py  views.py
lists/migrations/: 0001_initial.py  0002_list_created_at.py  0003_list_slug_alter_list_name.py
lists/templates/: list_detail.html  list_form.html  lists.html
memos/: admin.py  forms.py  models.py  urls.py  views.py
memos/migrations/: 0001_initial.py  0002_rename_creted_at_memo_created_at.py  0003_alter_memo_lists_alter_memo_place_alter_memo_tags.py  0004_alter_memo_lists_alter_memo_tags.py
memos/templates/: memo_detail.html  memo_form.html  memo_list.html
places/: admin.py  ajax.py  forms.py  models.py  urls.py  views.py
places/migrations/: 0001_initial.py  0002_alter_place_location_alter_place_yelp_id.py  0002_alter_place_slug.py  0002_alter_place_tags.py  0002_place_created_by.py
places/templates/: place_detail.html  place_form.html  place_list.html  places.html
placesmemo/: admin.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
placesmemo/templates/: base.html  base_nav.html  base_styles.html  base_title.html  home.html
static/css/: style.css
static/js/: editable.js  new_row.js
staticfiles/js/: script.js
tags/: models.py  urls.py  views.py
tags/migrations/: 0001_initial.py  0002_taggedmemo.py  0003_remove_tag_created_at.py  (+1 more)
templates/: base.html  places_list.html
(+4 files in other folders)
