[tool.poetry]
name = "placesmemo"
version = "0.1.0"
description = "A lightweight application to create memos you've visited"
authors = ["TJ Bredemeyer <24536909+tjbredemeyer@users.noreply.github.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.4"
Django = "4.2"
django-environ = "^0.10.0"
django-taggit = "^3.1.0"
psycopg2 = "^2.9.6"
dj-database-url = "^1.3.0"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
